# primitive

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  unscientific_benchmark.md
src/: bresenham.rs  context.rs  distance.rs  errors.rs  generator.rs  main.rs  settings.rs  unscientific_benchmark.md
