[package]
name = "primitive"
version = "0.1.0"
authors = ["Anthony Nguyen <anknguyen@gmail.com>"]
description = "Approximates images by drawing random lines"
homepage = "https://github.com/anthonynguyen/primitive"
documentation = "https://github.com/anthonynguyen/primitive"
repository = "https://github.com/anthonynguyen/primitive"
readme = "README.md"
keywords = ["image", "approximation"]
categories = ["multimedia::images", "command-line-interface"]
license = "MIT"

[dependencies]
chrono = "0.4.0"
clap = "2.26.2"
error-chain = { version = "0.11.0", default-features = false }
image = "0.16.0"
log = "0.3.8"
loglog = "0.3.2"
rand = "0.3.17"

[badges]
travis-ci = { repository = "anthonynguyen/primitive" }
